--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<!-- Content Delivery Network https://reactjs.org/docs/cdn-links.html-->
 		<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+		<link rel = "stylesheet" href = "style.css" />
 	</head>
 	<body>
-		<h1> Todo App </h1>
 		<div id = "root">
 			<script src = "app.js"></script>
 		</div>
